[package]
name = "migux"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../crates/core" }
config = { path = "../crates/config" }
http-core = { package = "http", path = "../crates/http" }
parser = { path = "../crates/parser" }
router = { path = "../crates/router" }
static-files = { package = "migux-static", path = "../crates/static" }
proxy = { path = "../crates/proxy" }
utils = { path = "../crates/utils" }

# Hereda del workspace
tokio = { workspace = true }
hyper = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

