[package]
name = "migux"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../crates/core" }
migux_config = { path = "../crates/migux_config" }
migux_http = { path = "../crates/migux_http" }
parser = { path = "../crates/parser" }
migux_router = { path = "../crates/migux_router" }
migux_static = { path = "../crates/migux_static" }
migux_proxy = { path = "../crates/migux_proxy" }
utils = { path = "../crates/utils" }

# Hereda del workspace
tokio = { workspace = true }
hyper = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

