[package]
name = "migux_core"
version = "0.1.0"
edition = "2024"

[dependencies]
migux_config = { path="../migux_config" }
migux_http = { path="../migux_http" }
migux_proxy = { path="../migux_proxy" }
migux_static = { path="../migux_static" }

dashmap = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
